WEB CLIENT : fix img overflowing height

--- a/web-client/client/src/assets/sass/main.scss
+++ b/web-client/client/src/assets/sass/main.scss
@@ -25,6 +25,7 @@ button {
 
 img {
     max-width: 100%;
+    max-height: 100%;
 }
 
 label {
